--- a/app/src/main/res/layout/choose_topics_bottom_sheet_dialog_fragment_layout.xml
+++ b/app/src/main/res/layout/choose_topics_bottom_sheet_dialog_fragment_layout.xml
@@ -19,7 +19,7 @@
     android:layout_marginTop="@dimen/space_35"
     android:layout_marginEnd="32.5dp"
     android:gravity="center_horizontal"
-    android:text="What do you prefer? We have 3 formats you can dig into"
+    android:text="@string/format_preference"
     android:textColor="#515151"
     android:textSize="18sp"
     app:fontName="Roboto-Medium.ttf" />
@@ -61,7 +61,7 @@
       android:layout_height="wrap_content"
       android:paddingStart="@dimen/space_7"
       android:paddingEnd="@dimen/space_7"
-      android:text="Interesting stories, articles, experiences by bloggers experts"
+      android:text="@string/interesting_content"
       android:textColor="@color/campaign_515151"
       android:textSize="14sp"
       app:fontName="Roboto-Regular.ttf"
@@ -117,7 +117,7 @@
       android:layout_height="wrap_content"
       android:paddingStart="@dimen/space_7"
       android:paddingEnd="@dimen/space_7"
-      android:text="Short stories, poems, motivational or funny quotes"
+      android:text="@string/short_stories_content"
       android:textColor="@color/campaign_515151"
       android:textSize="14sp"
       app:fontName="Roboto-Regular.ttf"
@@ -172,7 +172,7 @@
       android:layout_height="wrap_content"
       android:paddingStart="@dimen/space_7"
       android:paddingEnd="@dimen/space_7"
-      android:text="Entertaining videos showcasing mum’s talent, recipes  more"
+      android:text="@string/vlogs_content"
       android:textColor="@color/campaign_515151"
       android:textSize="14sp"
       app:fontName="Roboto-Regular.ttf"
@@ -202,7 +202,7 @@
     android:layout_marginEnd="@dimen/space_16"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    android:text="Select Topics"
+    android:text="@string/select_topics"
     android:textSize="18sp"
     app:fb_borderColor="@color/white"
     app:fb_borderWidth="1dp"
@@ -220,7 +220,7 @@
     android:layout_marginTop="@dimen/space_20"
     android:layout_marginEnd="32.5dp"
     android:gravity="center_horizontal"
-    android:text="Maybe Later"
+    android:text="@string/campaign_maybe_later_text"
     android:textColor="#9B9B9B"
     android:textSize="18sp"
     app:fontName="Roboto-Regular.ttf" />
