--- a/app/src/main/res/layout/follow_topic_creators_item.xml
+++ b/app/src/main/res/layout/follow_topic_creators_item.xml
@@ -44,7 +44,7 @@
         app:fb_borderWidth="1dp"
         app:fb_defaultColor="@color/white_color"
         app:fb_radius="4dp"
-        app:fb_text="Follow Topics"
+        app:fb_text="@string/follow_topics"
         app:fb_textColor="@color/app_red"
         app:layout_constraintEnd_toStartOf="@+id/followCreatorsWidget"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
         app:fb_borderWidth="1dp"
         app:fb_defaultColor="@color/white_color"
         app:fb_radius="4dp"
-        app:fb_text="Find Friends"
+        app:fb_text="@string/find_my_friends"
         app:fb_textColor="@color/app_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/followTopicsWidget"
