--- a/app/src/main/res/layout/friends_following_bloggers_fragment.xml
+++ b/app/src/main/res/layout/friends_following_bloggers_fragment.xml
@@ -36,7 +36,7 @@
     android:gravity="center_horizontal"
     android:paddingTop="@dimen/space_16"
     android:paddingBottom="16dp"
-    android:text="Follow bloggers your friends are following"
+    android:text="@string/follow_bloggers_your_friends_are_following"
     android:textColor="@color/campaign_515151"
     android:textSize="16sp"
     app:fontName="Roboto-Bold.ttf"
@@ -52,7 +52,7 @@
     android:background="#F9F9F9"
     android:gravity="center_horizontal"
     android:paddingBottom="@dimen/space_16"
-    android:text="Follow them to never miss amazing posts they create"
+    android:text="@string/follow_to_never_miss"
     android:textColor="@color/campaign_515151"
     android:textSize="14sp"
     android:visibility="gone"
@@ -65,9 +65,10 @@
     android:layout_height="0dp"
     android:background="@color/white"
     android:padding="@dimen/space_16"
-    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintBottom_toTopOf="@+id/separator"
     app:layout_constraintTop_toBottomOf="@id/subHeaderTextView" />
   <View
+    android:id="@+id/separator"
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="#E3E3E3"
