--- a/app/src/main/res/layout/suggested_topic_custom_view.xml
+++ b/app/src/main/res/layout/suggested_topic_custom_view.xml
@@ -33,6 +33,7 @@
       android:visibility="gone" />
 
     <ImageView
+      android:id="@+id/followCtaImageView"
       android:layout_width="18dp"
       android:layout_height="18dp"
       android:layout_centerVertical="true"
