--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -126,6 +126,7 @@
   <ImageView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_below="@+id/emailTextView"
     android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
     android:adjustViewBounds="true"
