--- a/app/src/main/res/menu/edit_vlog_details_menu.xml
+++ b/app/src/main/res/menu/edit_vlog_details_menu.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/edit_vlog"
-        android:actionMenuTextColor="@color/black_color"
-        android:icon="@drawable/ic_edit_title"
-        android:title="@string/user_funny_video.edit_title" />
-    <item
-        android:id="@+id/disable_comment"
-        android:actionMenuTextColor="@color/black_color"
-        android:icon="@drawable/ic_disable_comments_icon"
-        android:title="@string/user_funny_video.disable_comment"
-        android:visible="false" />
-
+  <item
+    android:id="@+id/edit_vlog"
+    android:actionMenuTextColor="@color/black_color"
+    android:icon="@drawable/ic_edit_title"
+    android:title="@string/user_funny_video.edit_title" />
+  <item
+    android:id="@+id/disable_comment"
+    android:actionMenuTextColor="@color/black_color"
+    android:icon="@drawable/ic_disable_comments_icon"
+    android:title="@string/user_funny_video.disable_comment"
+    android:visible="false" />
+  <item
+    android:id="@+id/deleteVlog"
+    android:actionMenuTextColor="@color/black_color"
+    android:icon="@drawable/ic_bookmark_delete"
+    android:title="@string/child_delete"
+    android:visible="false" />
 </menu>
